fix: improve function parameter formatting in GraphQL request functions, update author name in package.json and

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "nextjs",
     "react"
   ],
-  "author": "Your Name",
+  "author": "Miracle Onyenma",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^22.13.10",
